--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     margin: 1% 5%;
-    background-color:#021720;
+    background-color:#0bca54;
 }
 
 main {
